Add library cards with expansion.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server-express": "^1.2.0",
     "body-parser": "^1.15.2",
+    "cloudinary": "^1.9.1",
     "concurrently": "^3.5.1",
     "express": "^4.14.0",
     "graphql": "^0.11.7",
