--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.0.2",
     "apollo-client-preset": "^1.0.5",
     "babel-plugin-import": "^1.6.3",
+    "cloudinary-react": "^1.0.6",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.6.0",
     "react": "^16.2.0",
@@ -24,5 +25,14 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.17.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.42.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.6.1"
   }
 }
