--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "antd": "^3.0.2",
     "apollo-client-preset": "^1.0.5",
     "babel-plugin-import": "^1.6.3",
-    "cloudinary-react": "^1.0.6",
+    "change-case": "^3.0.1",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.6.0",
     "react": "^16.2.0",
@@ -17,22 +17,14 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "styled-components": "^2.2.4"
+    "react-scripts": "^1.1.1",
+    "react-transition-group": "^2.2.1",
+    "styled-components": "^3.1.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^4.17.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.42.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.6.1"
-  }
+  "devDependencies": {}
 }
