--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "snipetto",
+  "name": "vscodesnippets",
   "version": "1.0.0",
-  "description": "",
+  "description": "View and practice snippet libraries.",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"nodemon index.js\" \"npm run start --prefix client\"",
-    "test": "NODE_ENV=test nodemon --exec 'mocha --recursive -R min'",
-    "add-lib": "node create-new-library.js"
+    "build": "npm install --prefix client && npm run build --prefix client",
+    "server": "nodemon -r dotenv/config index.js",
+    "client": "npm run start --prefix client",
+    "start": "node index.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "",
+  "author": "VPP",
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^1.2.0",
     "body-parser": "^1.15.2",
-    "cloudinary": "^1.9.1",
     "concurrently": "^3.5.1",
+    "dotenv": "^5.0.0",
     "express": "^4.14.0",
     "graphql": "^0.11.7",
     "graphql-tools": "^2.12.0",
     "lodash": "^4.17.4",
-    "mocha": "^3.2.0",
-    "mongoose": "^4.7.1",
-    "prompt": "^1.0.0",
-    "supertest": "^2.0.1",
-    "xml2js": "^0.4.19"
+    "mongoose": "^4.7.1"
+  },
+  "now": {
+    "alias": "vscodesnippets",
+    "env": {
+      "DB_URL": "@vscode_snippets_db_url",
+      "NODE_ENV": "production"
+    }
   },
   "devDependencies": {
     "nodemon": "^1.12.5"
